--- a/Mod02/05_GetterSetter copy 2.html
+++ b/Mod02/05_GetterSetter copy 2.html
@@ -23,7 +23,7 @@
               return msg.toUpperCase()
             },
             set(newvalue) {
-              msz = newvalue.toLowerCase()
+              msg = newvalue.toLowerCase()
             },
           })
           return {
