--- a/Mod02/05_GetterSetter copy 2.html
+++ b/Mod02/05_GetterSetter copy 2.html
@@ -15,7 +15,7 @@
     <script src="https://unpkg.com/vue@3.0.4/dist/vue.global.js"></script>
     <script>
       const ref = Vue.ref
-      const computed = Vue.computed;
+      const computed = Vue.computed
       Vue.createApp({
         setup() {
           const msg = ref("Hello World ! ")
