--- a/Mod02/chatroom.html
+++ b/Mod02/chatroom.html
@@ -91,7 +91,7 @@
         </div>
       </div>
       <footer class="bg-info p-3 text-center">
-        <p class="m-0 small">copyright by 六角學院卡斯伯</p>
+        <p class="m-0 small">copyright</p>
       </footer>
     <script src="https://unpkg.com/vue@next"></script>
 
